Add support for Feat rollMacro field.

--- a/templates/item/feat-sheet.html
+++ b/templates/item/feat-sheet.html
@@ -40,7 +40,13 @@
                 <label>{{ localize "MB.RollFormula" }}:</label>
                 <input type="text" name="data.rollFormula" value="{{data.data.rollFormula}}" placeholder="" data-dtype="String" />
             </div>
-            
+
+            {{!-- Roll Macro --}}
+            <div class="form-group">
+                <label>{{ localize "MB.RollMacro" }}:</label>
+                <input type="text" name="data.rollMacro" value="{{data.data.rollMacro}}" placeholder="" data-dtype="String" />
+            </div>
+
         </div>        
     </section>
 </form>
