--- a/scss/morkborg/03-actor-sheet.scss
+++ b/scss/morkborg/03-actor-sheet.scss
@@ -93,23 +93,24 @@ color: darkgray;
   width: 120px;
 }
 .morkborg.sheet.actor .sheet-body .violence-tab .item-list .item-name {
+  flex: 1;
   font-size: 16px;
   margin-top: 5px;
 }
 .morkborg.sheet.actor .sheet-body .violence-tab .item-list .item-fields {
+  flex: 0.5;
   font-size: 16px;
   margin-top: 6px;
 }
-.morkborg.sheet.actor .sheet-body .violence-tab .item-list .versus-armor {
-  margin-left: 10px;
-}
-.morkborg.sheet.actor .sheet-body .violence-tab .weapon-list .item-field.handed {
-  text-align: right;
-  width: 30px;
-}
 .morkborg.sheet.actor .sheet-body .violence-tab .weapon-list .item-field.damage-die {
   text-align: right;
-  width: 70px;
+}
+.morkborg.sheet.actor .sheet-body .violence-tab .weapon-list .item-field.weapon-type {
+  text-align: right;
+  width: 60px;
+}
+.morkborg .sheet-body .violence-tab .weapon-list .item-buttons {
+  flex: 0.5;
 }
 .morkborg.sheet.actor .sheet-body .violence-tab .attack-rule {
   text-align: center;
