Improve various displayed formula and formatting in roll cards.

--- a/templates/chat/attack-roll-card.html
+++ b/templates/chat/attack-roll-card.html
@@ -10,7 +10,7 @@
     {{/each}}
     <div class="attack-roll">
         <div class="roll-title">
-            <span>{{localize 'MB.Attack'}}: {{attackRoll.formula}} {{localize 'MB.Vs'}} {{localize 'MB.DR'}} {{attackDR}}</span>
+            <span>{{localize 'MB.Attack'}}: {{attackFormula}} {{localize 'MB.Vs'}} {{localize 'MB.DR'}} {{attackDR}}</span>
         </div>
         <div class="roll-result">
             <span>{{xtotal attackRoll}}</span>
