--- a/templates/chat/defend-roll-card.html
+++ b/templates/chat/defend-roll-card.html
@@ -10,7 +10,7 @@
     {{/each}}
     <div class="defend-roll">
         <div class="roll-title">
-            <span>{{localize 'MB.Defend'}}: {{defendRoll.formula}} {{localize 'MB.Vs'}} {{localize 'MB.DR'}} {{defendDR}}</span>
+            <span>{{localize 'MB.Defend'}}: {{defendFormula}} {{localize 'MB.Vs'}} {{localize 'MB.DR'}} {{defendDR}}</span>
         </div>
         <div class="roll-result">
             <span>{{xtotal defendRoll}}</span>
