--- a/templates/chat/test-ability-roll-card.html
+++ b/templates/chat/test-ability-roll-card.html
@@ -9,7 +9,7 @@
     </div>
     <div class="test-roll">
         <div class="roll-title">
-            <span>{{abilityRoll.formula}}</span>
+            <span>{{displayFormula}}</span>
         </div>
         <div class="roll-result">
             <span>{{xtotal abilityRoll}}</span>
