--- a/templates/chat/wield-power-roll-card.html
+++ b/templates/chat/wield-power-roll-card.html
@@ -4,7 +4,7 @@
     </div>
     <div class="wield-roll">
         <div class="roll-title">
-            <span>{{localize 'MB.Wield'}}: {{wieldRoll.formula}} {{localize 'MB.Vs'}} {{localize 'MB.DR'}} {{wieldDR}}</span>
+            <span>{{localize 'MB.Wield'}}: {{wieldFormula}} {{localize 'MB.Vs'}} {{localize 'MB.DR'}} {{wieldDR}}</span>
         </div>
         <div class="roll-result">
             <span>{{xtotal wieldRoll}}</span>
