--- a/templates/chat/outcome-roll-card.html
+++ b/templates/chat/outcome-roll-card.html
@@ -4,7 +4,7 @@
     </div>
     <div class="test-roll">
         <div class="roll-title">
-            <span>{{roll.formula}}</span>
+            <span>{{rollFormula}}</span>
         </div>
         <div class="roll-result">
             <span>{{xtotal roll}}</span>
