Localize add item dialog.

--- a/templates/dialog/add-item-dialog.html
+++ b/templates/dialog/add-item-dialog.html
@@ -7,12 +7,12 @@
       <label>{{localize 'MB.Type'}}:</label>
       <br>
       <select name="itemtype" class="add-type">
-        <option value="armor">Armor</option>
-        <option value="container">Container</option>
-        <option value="misc" selected>Misc</option>
-        <option value="scroll">Scroll</option>
-        <option value="shield">Shield</option>
-        <option value="weapon">Weapon</option>
+        <option value="armor">{{localize 'MB.ItemTypeArmor'}}</option>
+        <option value="container">{{localize 'MB.ItemTypeContainer'}}</option>
+        <option value="misc" selected>{{localize 'MB.ItemTypeMisc'}}</option>
+        <option value="scroll">{{localize 'MB.ItemTypeScroll'}}</option>
+        <option value="shield">{{localize 'MB.ItemTypeShield'}}</option>
+        <option value="weapon">{{localize 'MB.ItemTypeWeapon'}}</option>
       </select>
     </div>    
 </form>
