--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="omens-row">
-                <span class="stat-label" title="{{ localize 'MB.OmensHelpText' }}">{{ localize "MB.Omens" }}:</span>
+                <span class="stat-label omens-label" title="{{ localize 'MB.OmensHelpText' }}">{{ localize "MB.Omens" }}:</span>
                 <input class="stat-input" name="data.omens.value" type="number" value="{{data.data.omens.value}}" data-dtype="Number"/>
                 <span class="rule-text omen-rule rollable">{{data.data.class.data.omenDie}} {{ localize "MB.PerRest"}}</span>
                 <button type="button" class="button item-button get-better-button rollable" title="{{localize 'MB.GetBetter'}}">{{localize 'MB.GetBetter'}}</button>
