--- a/scss/morkborg/04-character-sheet.scss
+++ b/scss/morkborg/04-character-sheet.scss
@@ -117,6 +117,13 @@
     margin-bottom: 7px;
     width: 100%;
   }
+  .morkborg.sheet.actor.character .sheet-header .omens-row .omens-label:hover {
+    // text-decoration: underline;
+    // text-decoration-style: dotted;
+    color: var(--highlight-foreground-color);
+    text-shadow: 0 0 10px var(--highlight-background-color);
+    cursor: pointer;  
+  }
   .morkborg.sheet.actor.character .sheet-header .omen-rule {
     flex: 0 0 90px;
     margin-left: 10px;
