Treat empty/zero morale as 'always stand firm'

--- a/templates/actor/creature-sheet.html
+++ b/templates/actor/creature-sheet.html
@@ -43,7 +43,7 @@
             {{!-- Morale --}}
             <div class="form-group">
                 <label>{{ localize "MB.Morale" }}:</label>
-                <input name="data.morale" type="text" value="{{data.data.morale}}" placeholder="10" data-dtype="Number"/>
+                <input name="data.morale" type="text" value="{{data.data.morale}}" placeholder="" data-dtype="Number"/>
             </div>
 
             {{!-- Armor --}}
